@@ -21,6 +21,8 @@
  - (bal) First wave of contrib/solaris/ package upgrades.  Still more
    work needs to be done, but it is a 190% better then the stuff we
    had before!
+ - (bal) Minor bug fix in contrib/solaris/opensshd.in .. $etcdir was not
+   set right.
 
 20011010
  - (djm) OpenBSD CVS Sync
@@ -6719,4 +6721,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1607 2001/10/12 20:30:52 mouring Exp $
+$Id: ChangeLog,v 1.1608 2001/10/12 21:52:39 mouring Exp $
